--- a/app/views/pages/electronics.html.erb
+++ b/app/views/pages/electronics.html.erb
@@ -11,10 +11,10 @@
       <h3 style="padding-bottom: 32px;"> 4 Weeks </h3>
       <h3 style="padding-bottom: 32px;"> What will I learn?</h3>
       <ul>
-      <li> Fundamentals of Carpentry </li>
-      <li> Gain insight and knowledge of tools and their uses in the workshop </li>
-      <li> Fundemental tecnhniques of basic carpentry </li>
-      <li> Practical hands on experience jointing, planing, sanding, routing.</li>
+      <li> Fundamentals of Electronics </li>
+      <li> Gain insight and knowledge of tools and their uses. </li>
+      <li> Learn to work safely with electronics. </li>
+      <li> Practical hands on experience wiring, testing, souldering.</li>
 
     </ul >
       <h3 style="padding-bottom: 32px; padding-top:32px;"> How will this empower me?</h3>
