--- a/app/views/pages/roof.html.erb
+++ b/app/views/pages/roof.html.erb
@@ -34,19 +34,14 @@
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE ROOF FINISHING RESOURCES </h2>
 
-    <h3 class="my-5" style="padding-top: 16px;"> Websites for designs/plans and tips</h3>
-<%= link_to "https://www.woodworkersworkshop.com/resources/index.php?cat=102", target: :blank do%>
-<div><%= image_tag "wwws.jpg" %> </div>
+    <h3 class="my-5" style="padding-top: 16px;"> Guides and useful information</h3>
+<%= link_to "https://www.brebookshop.com/samples/327361.pdf", target: :blank do%>
+<div style="width:300px; height:150px; text-align: center; align-items: center; background-color: black;"> <p style="font-size:1.5rem; color: white; padding-top: 56px;"> Roofs and Roofing</p> </div>
 <% end %>
 
-<%= link_to "https://woodworkjunkie.com/", target: :blank do%>
-<div style="padding-top: 40px;"><%= image_tag "woodjunkie.png" %> </div>
-<% end %>
 
-<h3 style="padding-top:40px;"> Free online roof finishing courses </h3>
-<%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
-<div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
-<% end %>
+
+
 
     </div>
 
