--- a/app/views/pages/experiment.html.erb
+++ b/app/views/pages/experiment.html.erb
@@ -1,5 +1,4 @@
-<!-- <div class="container">
-  <div class="row" style="height:80vh">
+<!--   <div class="row">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Please get in touch with us for more information.</h1>
     <div class="col-8">
       <h2 class="mt-5" style="padding-bottom: 24px; font-weight:700; font-size: 2.5rem;">Contact Details</h2>
@@ -23,12 +22,8 @@
 
     </div>
   </div>
-</div>
  -->
-
-
-
- <div class="container-2">
+<div class="container-2">
   <div class="row" style="height:80vh">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Please get in touch with us for more information.</h1>
     <div class="col-8" style="">
