--- a/app/assets/stylesheets/pages/experiment.scss
+++ b/app/assets/stylesheets/pages/experiment.scss
@@ -1,17 +1,17 @@
-h1{
-  padding-left:300px;
-  padding-right:300px;
+// h1{
+//   padding-left:300px;
+//   padding-right:300px;
 
-}
+// }
 
 .row{
   background-color:#A7A8AA;;
 }
 
-.col-8{
-  padding-left:300px;
+// .col-8{
+//   padding-left:300px;
 
-}
+// }
 
 
 .container-2{
@@ -21,5 +21,12 @@ h1{
     margin-right: auto;
     margin-left: auto;
       background-color:#A7A8AA;
+
+}
+
+
+.my-container{
+  width: auto;
+  background-color:#A7A8AA;
 
 }
