--- a/app/views/pages/experiment.html.erb
+++ b/app/views/pages/experiment.html.erb
@@ -23,8 +23,8 @@
     </div>
   </div>
  -->
-<div class="container-2">
-  <div class="row" style="height:80vh">
+<div class="container-2" style="padding-bottom:64px;">
+  <div class="row" style=" padding-left:275px;">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Please get in touch with us for more information.</h1>
     <div class="col-8" style="">
       <h2 class="mt-5" style="padding-bottom: 24px; font-weight:700; font-size: 2.5rem;">Contact Details</h2>
@@ -47,5 +47,84 @@
         </div>
 
     </div>
-  </div>
+
+            <div class="col-12 mt-3" style="background-color:#A7A8AA;align-items: center; position: relative; margin:0 auto; margin-left: -125px;">
+        <h1 style="text-align: center; padding-top: 64px; color:black;font-size:3.75rem;"  ><i> BREAKING BARRIERS TO LEARNING </i></h1>
+
+    </div>
+        <div class="col-6" style="padding-top: 40px;">
+
+              <p style="text-align:left; padding-top: 64px; justify-content: center;  color: black;font-size:1.5rem;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. We aim to alleviate poverty and uplift our community through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling, Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
+
+
 </div>
+
+    <div class="col-4" style="padding-top: 80px; padding-left: 24px;">
+
+        <%= image_tag "banner-1.jpg", class: "banpic" %>
+
+    </div>
+  </div>
+
+
+</div>
+
+
+<div class="container-3" style="padding-bottom:64px;">
+
+  <div class="container" style="background-color: black;">
+
+    <h1 class="mb-5" style="text-align: center; color:white; position:relative; margin:0 auto; padding-top: 88px; padding-bottom: 88px;"> OUR PROGRAMMES</h1>
+  <div class="articles-grid">
+
+    <%= link_to carpentry_path do %>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "woodwork.jpeg" %>)">
+  Carpentry
+</div>
+<% end %>
+
+    <%= link_to plumbing_path do %>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "plumbing.jpeg" %>)">
+  Plumbing
+</div>
+<% end %>
+
+<%= link_to welding_path do %>
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "welding.jpeg" %>)">
+  Welding
+</div>
+<% end %>
+
+    <%= link_to entrepeneurship_path do %>
+
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "entrepeneur.jpeg" %>)">
+  Entrepeneurship
+</div>
+<% end %>
+
+    <%= link_to electronics_path do %>
+
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "electronics.jpeg" %>)">
+  Electronics
+</div>
+<% end %>
+
+    <%= link_to bricks_path do %>
+
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "brick-masonry.jpeg" %>)">
+  Brick Laying/Masonry
+</div>
+<% end %>
+
+    <%= link_to roof_path do %>
+
+<div class="card-category " style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path "roof.jpeg" %>)">
+  Roof Finishing
+</div>
+<% end %>
+  </div>
+
+  </div>
+
+</div>
+
