--- a/app/views/pages/donations.html.erb
+++ b/app/views/pages/donations.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+ <div class="container">
   <div class="row">
     <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Thank you for choosing to make a donation.</h1>
@@ -8,7 +8,7 @@
     <div class="col-6">
 
       <h3 style="padding-bottom: 32px;"> Make an instant EFT payment with PayFast.</h3>
-<%= image_tag "payfast.png" %>
+<img src="/assets/payfast-62b2269cd056614d4f46292384d511f1c46365ab6ca72360b79ef1115de585a2.png" />
     </div>
     <div class="col-6">
    <h3 style="padding-bottom: 24px;"> Alternatively our banking details are: </h3>
@@ -20,7 +20,4 @@
 
     </div>
   </div>
-<!--       <h3></h3>
-      <h3></h3>
-      <h3></h3> -->
-</div>
+  </div>
