donations page looks better

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -29,6 +29,8 @@
 
 
  <div class="container-2">
+  <div class="container">
+
   <div class="row" style="height:80vh">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Please get in touch with us for more information.</h1>
     <div class="col-8" style="">
@@ -52,5 +54,6 @@
         </div>
 
     </div>
+  </div>
   </div>
 </div>
