--- a/app/views/pages/donations.html.erb
+++ b/app/views/pages/donations.html.erb
@@ -1,16 +1,25 @@
- <div class="container">
+ <div class="container-2">
   <div class="row">
-    <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
+    <div class="container">
+    <div class="col-12" style="position: relative; margin: 0 auto; text-align: center;">
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem;">Thank you for choosing to make a donation.</h1>
     <h2 style="padding-top: 24px; padding-bottom: 56px;"> There are two options to make your donation: </h2>
 
     </div>
-    <div class="col-6">
 
+    </div>
+  </div>
+
+      <div class="container">
+    <div class="row">
+    <div class="col-6">
+      <h3 style="padding-top:24px; padding-bottom:24px; font-weight:700;">OPTION 1: </h3>
       <h3 style="padding-bottom: 32px;"> Make an instant EFT payment with PayFast.</h3>
 <img src="/assets/payfast-62b2269cd056614d4f46292384d511f1c46365ab6ca72360b79ef1115de585a2.png" />
     </div>
     <div class="col-6">
+            <h3 style="padding-top:24px; padding-bottom:24px; font-weight:700;">OPTION 2: </h3>
+
    <h3 style="padding-bottom: 24px;"> Alternatively our banking details are: </h3>
     <h3>Account Name: Smart Multi Skills Hub</h3>
     <h3>First National Bank</h3>
@@ -19,5 +28,8 @@
       <h3 style="padding-bottom: 56px;">Account Number: 1012767701</h3>
 
     </div>
-  </div>
+
+    </div>
+
+      </div>
   </div>
