--- a/app/views/pages/bricks.html.erb
+++ b/app/views/pages/bricks.html.erb
@@ -1,3 +1,4 @@
+<div class="container-2">
 <div class="container">
   <div class="row" >
     <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
@@ -53,3 +54,6 @@
 
   </div>
 </div>
+
+</div>
+
