--- a/app/views/pages/carpentry.html.erb
+++ b/app/views/pages/carpentry.html.erb
@@ -1,3 +1,6 @@
+
+<div class="container-2">
+
 <div class="container">
   <div class="row" >
     <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
@@ -50,4 +53,6 @@
 
 
   </div>
+</div>
+
 </div>
