--- a/app/views/pages/welding.html.erb
+++ b/app/views/pages/welding.html.erb
@@ -1,3 +1,5 @@
+<div class="container-2">
+
 <div class="container">
   <div class="row" >
     <div class="col-8" style="position: relative; margin: 0 auto; text-align: center;">
@@ -52,4 +54,6 @@
 
 
   </div>
+</div>
+
 </div>
