--- a/app/views/pages/donations.html.erb
+++ b/app/views/pages/donations.html.erb
@@ -12,12 +12,12 @@
 
       <div class="container">
     <div class="row">
-    <div class="col-6">
+    <div class="col-12 col-lg-6" style="padding-bottom:56px;">
       <h3 style="padding-top:24px; padding-bottom:24px; font-weight:700;">OPTION 1: </h3>
       <h3 style="padding-bottom: 32px;"> Make an instant EFT payment with PayFast.</h3>
 <img src="/assets/payfast-62b2269cd056614d4f46292384d511f1c46365ab6ca72360b79ef1115de585a2.png" />
     </div>
-    <div class="col-6">
+    <div class=" col-12 col-lg-6">
             <h3 style="padding-top:24px; padding-bottom:24px; font-weight:700;">OPTION 2: </h3>
 
    <h3 style="padding-bottom: 24px;"> Alternatively our banking details are: </h3>
