--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,18 +6,18 @@
         <h1 style="text-align: center; padding-top: 64px; color:black;font-size:3.75rem;"  ><i> BREAKING BARRIERS TO LEARNING </i></h1>
 
     </div>
-        <div class="col-6" style="padding-top: 40px;">
+
+    <div class="col-12 col-lg-4" style="padding-top: 80px; padding-left: 24px;">
+
+        <%= image_tag "banner-1.jpg", class: "banpic" %>
+
+    </div>
+        <div class="col-8 col-lg-6" style="padding-top: 40px;">
 
               <p style="text-align:left; padding-top: 64px; justify-content: center;  color: black;font-size:1.5rem;">We instill Fundamental Skills within impoverished communities like Eldoradopark and it's surrounding areas. We aim to alleviate poverty and uplift our community through a variety of training programmes, as well as jump start job creation initiatives and basic skills develpoment programmes. Be part of our Women in Construction Programmes. Some of our training programmes include : Soft skills development, Entrepreneurship Programmes, Bricklaying (Masonry), Plastering & Tiling, Roof Finishing,Carpentry, Plumbing, Welding, Electronics.</p>
 
 
 </div>
-
-    <div class="col-4" style="padding-top: 80px; padding-left: 24px;">
-
-        <%= image_tag "banner-1.jpg", class: "banpic" %>
-
-    </div>
   </div>
 
 
