--- a/app/views/pages/carpentry.html.erb
+++ b/app/views/pages/carpentry.html.erb
@@ -7,7 +7,7 @@
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem; padding-bottom: 56px;">Carpentry</h1>
 
     </div>
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> COMMON QUESTIONS ABOUT THE PROGRAMME </h2>
       <h3 > How long is the program?</h3>
@@ -31,7 +31,7 @@
     </div>
 
 
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE CARPENTRY RESOURCES </h2>
 
@@ -46,7 +46,7 @@
 
 <h3 style="padding-top:40px;"> Free online carpentry courses </h3>
 <%= link_to "https://alison.com/courses?query=woodwork", target: :blank do%>
-<div style="padding-top: 40px; "><%= image_tag "alison.png", class: "black-back" %> </div>
+<div style="padding-top: 40px; padding-bottom:64px;"><%= image_tag "alison.png", class: "black-back" %> </div>
 <% end %>
 
     </div>
