courses look better on page

--- a/app/views/pages/roof.html.erb
+++ b/app/views/pages/roof.html.erb
@@ -5,7 +5,7 @@
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem; padding-bottom: 56px;">Roof Finishing</h1>
 
     </div>
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> COMMON QUESTIONS ABOUT THE PROGRAMME </h2>
       <h3 > How long is the program?</h3>
@@ -31,13 +31,13 @@
     </div>
 
 
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE ROOF FINISHING RESOURCES </h2>
 
     <h3 class="my-5" style="padding-top: 16px;"> Guides and useful information</h3>
 <%= link_to "https://www.brebookshop.com/samples/327361.pdf", target: :blank do%>
-<div style="width:300px; height:150px; text-align: center; align-items: center; background-color: black;"> <p style="font-size:1.5rem; color: white; padding-top: 56px;"> Roofs and Roofing</p> </div>
+<div style="width:300px; height:150px; text-align: center; align-items: center; background-color: black; margin-bottom:64px;"> <p style="font-size:1.5rem; color: white; padding-top: 56px;"> Roofs and Roofing</p> </div>
 <% end %>
 
 
