--- a/app/views/pages/plumbing.html.erb
+++ b/app/views/pages/plumbing.html.erb
@@ -6,7 +6,7 @@
     <h1 class="mt-5" style="font-weight: 700; font-size: 3.25rem; padding-bottom: 56px;">Plumbing</h1>
 
     </div>
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> COMMON QUESTIONS ABOUT THE PROGRAMME </h2>
       <h3 > How long is the program?</h3>
@@ -32,7 +32,7 @@
     </div>
 
 
-    <div class="col-6">
+    <div class="col-12 col-lg-6">
 
     <h2 style="padding-top: 24px; padding-bottom: 40px;"> FREE PLUMBING RESOURCES </h2>
 
